# tpmp-rvn-lab5-the_musical_prodigy

./: .gitignore  CMakeLists.txt  Makefile  MusicSalon.cpp  README.md  create_test_DB  musicApp.cpp  musicApp.sln  musicApp.vcxproj  musicApp.vcxproj.filters  music_salon_v2.0.db  music_salon_v2.0.sql  remove_test_DB
.github/workflows/: build.yml
MusicSalon/MusicSalon/: CD.cpp  CD.h  Model.h  MusicSalon.cpp  MusicalComposition.cpp  MusicalComposition.h  Operation.cpp  Operation.h  User.cpp  User.h  command.cpp  command.h  controller.cpp  controller.h  view.cpp  view.h
database/: music_salon_database_create.sql  music_salon_v2.0.db
docs/: Database-Schema.md  Functional-Requirements.md  Glossary.md  Project-Presentation.md  Project-Specification.md  index.md
include/: CD.h  Model.h  MusicalComposition.h  Operation.h  User.h  command.h  controller.h
include/Controller/: controller.h
include/Model/: CD.h  Model.h  MusicalComposition.h  Operation.h  User.h
include/View/: command.h  view.h
libs/: SQLiteCpp.lib
model/: Makefile
model/include/: CD.h  Model.h  MusicalComposition.h  Operation.h  User.h
model/src/: CD.cpp  Model.cpp  MusicalComposition.cpp  Operation.cpp  User.cpp  main.cpp
src/: CD.cpp  Model.cpp  MusicSalon.cpp  MusicalComposition.cpp  Operation.cpp  User.cpp  command.cpp  controller.cpp  view.cpp
src/Controller/: controller.cpp
src/Model/: CD.cpp  Model.cpp  MusicalComposition.cpp  Operation.cpp  User.cpp
src/View/: command.cpp  view.cpp
tests/: CMakeLists.txt  tests.cpp  tests_coverage
